--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "A commitizen adapter for the angular preset with customize",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "release": "standard-version"
   },
   "author": "wusiquan",
   "license": "MIT",
-  "devDependencies": {},
+  "devDependencies": {
+    "standard-version": "^8.0.0"
+  },
   "dependencies": {
     "chalk": "^4.1.0",
-    "commitizen": "^4.1.2",
     "conventional-commit-types": "^3.0.0",
     "lodash.map": "^4.6.0",
     "longest": "^2.0.1",
