chore: 修改package.json
增加了commitizen配置

--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "lodash.map": "^4.6.0",
     "longest": "^2.0.1",
     "word-wrap": "^1.2.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
